--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Tableau Extension - Jupyter Hosted</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tableau ChatGPT Advisor</title>
 </head>
 <body>
-  <h2>Hello from Local Extension (Jupyter)</h2>
-  <button onclick="initialize()">Connect to Tableau</button>
-
-  <script src="https://cdn.jsdelivr.net/npm/tableau-api@latest"></script>
-  <script src="script.js"></script>
+    <h1>Welcome to Tableau ChatGPT Advisor</h1>
+    <p>This extension integrates Tableau with OpenAI's ChatGPT for smart insights.</p>
+    <script src="script.js"></script>
 </body>
 </html>
